app/assets/stylesheets/pages.scss
body {
  font-family: 'IBM Plex Mono', monospace;
  padding-top: 1em;
}

th, td {
  padding: 6px 0;
}

.padded-table {
  table {
    th, td {
      padding: 10px 8px;
    }
  }
}

.image {
  margin: 0 auto;
  img {
    border-radius: 5px;
  }
}

.image-md {
  width: 200px;
  height: 200px;
}

.image-sm {
  width: 150px;
  height: 150px;
}

th.date-played { width: 27% }

.comments-container {
  padding: 0 10%;
}

.comment-form {
  display: flex;
  flex-direction: row;

  .comment-input {
    flex: 20;
    margin-right: 10px;
  }

  .comment-button {
    flex: 2;
  }
}

.comment {

  .commenter {
    font-size: 1em;

    .comment-time {
      color: #a7a7a7;
    }
  }

  .comment-body {
    font-size: 1.2em;
  }
}


a {
  text-decoration: none;

  &:hover {
    text-decoration: underline;
  }
}

.center-elements {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.header-links {
  display: flex;
  align-items: center;
  justify-content: center;
  padding-left: 16px;

  a {
    margin: 0 3px;
  }
}

@media (max-width: 750px) {
  .header-links {
    padding-left: 0;
  }

  .comments-container {
    padding: 0;

    .comment-form {
      display: flex;
      flex-direction: column;
    }
  }
}



.inline-elements {
  display: flex;
}

.header {

  .logo {
    margin: 10px;
  }
}

.alerts {
  justify-content: center;

  p {
    margin: 10px 0;
    font-size: 13px;
    border-radius: 5px;
    padding: 10px 25px;
    text-align: center;
  }

  .notice {
    border: 2px solid #00c906;
  }

  .alert {
    border: 2px solid #f50400;
  }
}

.text-center { text-align: center; }
.text-right { text-align: right; }
.text-sm { font-size: 13px; }

.green-text { color: #00c906 }
.red-text { color: #f50400 }
.bold-text { font-weight: bold }

.user-form {
  min-width: 300px;
  max-width: 300px;
}

.match-form {
  min-width: 400px;
  max-width: 400px;
}

.button {
  padding: 0 12px;
}

.mt-20 { margin-top:    20px; }
.mr-20 { margin-right:  20px; }
.mb-20 { margin-bottom: 20px; }
.ml-20 { margin-left:   20px; }
.m-0 { margin: 0; }

